--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,6 +5,8 @@ on:
     tags:
       - "*"
 
+  workflow_dispatch:
+
 jobs:
 
   build:
@@ -12,15 +14,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v6
         with:
           submodules: recursive
 
-      - name: set up JDK 17
-        uses: actions/setup-java@v2
+      - name: set up JDK 21
+        uses: actions/setup-java@v5
         with:
-          java-version: '17'
-          distribution: 'adopt'
+          java-version: '21'
+          distribution: 'temurin'
           cache: gradle
 
       - name: Create release keystore
@@ -35,7 +37,7 @@ jobs:
         run: ./gradlew assembleFreeDynamic
 
       - name: Upload Artifact
-        uses: actions/upload-artifact@v3.1.0
+        uses: actions/upload-artifact@v6
         with:
           name: apk
           path: lemuroid-app/build/outputs/apk/freeDynamic/release/lemuroid-app-free-dynamic-release.apk
@@ -47,7 +49,7 @@ jobs:
 
     steps:
       - name: Download Artifact
-        uses: actions/download-artifact@v3.0.0
+        uses: actions/download-artifact@v7
         with:
           name: apk
 
